BJS2-15581 - Подпроекты
+ Пофиксил конфликты